[package]
name = "wasmpocttf"
version = "0.1.0"
edition = "2021"


[dependencies]
num_cpus = { version = "1.16.0", optional = true }
true = { version = "0.1.0", optional = true }
harfbuzz-wasm = { path = "../harfbuzz-wasm"}
wasm-bindgen = "0.2.87"
regex = "1.7.1"
meval = "0.2.0"

[lib]
crate-type = ["cdylib"]


[profile.release]
panic = "abort"
